<resources>
    <string name="app_name">My Contact List</string>
    <string name="button_to_display_list_of_contacts">Button to display list of contacts</string>
    <string name="button_to_display_the_map">Button to display the map</string>
    <string name="button_to_display_the_settings">Button to display the Settings</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="button">Button</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="email_address">Email Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="change">Change</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="contact">Contact:</string>
    <string name="sort_contacts_by">Sort Contacts By:</string>
    <string name="sort_order">Sort Order:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="brithday1">Brithday</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="background_color">Background Color</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="grey">Grey</string>
</resources>