<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_list_of_contacts"
            app:srcCompat="@drawable/contactlisticon" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_the_map"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_the_settings"
            app:srcCompat="@drawable/settingsicon" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/settingsScrView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sort_contacts_by" />

            <RadioGroup
                android:id="@+id/radioGroupSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radioName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <RadioButton
                    android:id="@+id/radioCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />

                <RadioButton
                    android:id="@+id/radioBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brithday1" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sort_order" />

            <RadioGroup
                android:id="@+id/radioGroupSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radioAscending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ascending" />

                <RadioButton
                    android:id="@+id/radioDescending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descending" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/background_color" />

            <RadioGroup
                android:id="@+id/radioGroupBackgroundColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radioWhiteBckGrnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/white" />

                <RadioButton
                    android:id="@+id/radioBlueBckGrnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue" />

                <RadioButton
                    android:id="@+id/radioGreenBckGrnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/green" />

                <RadioButton
                    android:id="@+id/radioGreyBckGrnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grey" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>